# CLAVI_CPP

./: .gitignore  CMakeLists.txt  objDetection.cpp
Classification/: CMakeLists.txt  classification.cpp  main.cpp  run.sh
Classification/include/: CMakeLists.txt  ObjectClassification.cpp  ObjectClassification.h
Classification/include/plot/: CMakeLists.txt  FPS.cpp  PerformancePlot.h
Classification/src_original/: classification.cpp
Semantic_Segmentation/: CMakeLists.txt  semantic_seg.cpp
instance_segmentation/: CMakeLists.txt  main.cpp
instance_segmentation/include/: CMakeLists.txt  Instance.h  InstanceSegmentation.cpp  InstanceSegmentation.h  Masks.h
instance_segmentation/include/plot/: PerformancePlot.cpp  csvfile.h
instance_segmentation/log/: Mon Mar  6 14:02:07Instance Segmentation FPS Testing.csv  Mon Mar  6 14:02:35Instance Segmentation FPS Testing.csv  Mon Mar  6 14:03:15Instance Segmentation FPS Testing.csv  Mon Mar  6 14:21:02Instance Segmentation FPS Testing.csv
instance_segmentation/original/Instance_Segmentation/: CMakeLists.txt  corrosion_labels.txt  instance_seg.cpp
obj_detection/: CMakeLists.txt  CVQueue.cpp  CVQueue.h  GridAndStride.h  ObjectDetection.cpp  ObjectDetection.h  ffmpeg_main.cpp  install.sh  main.cpp
obj_detection/include/: CMakeLists.txt  ObjectDetection.cpp  ObjectDetection.h
obj_detection/include/plot/: CustomData.cpp
obj_detection/include/queue/: CMakeLists.txt  CVQueue.cpp
obj_detection/log/: Mon Mar  6 16:20:42Performance Testing.csv
obj_detection/utils/: objDetectionCopy.cpp
obj_detection/utils/label/: technopro_obj_labels.txt
obj_detection/utils/sdp/: ffmpegextension.sdp
rtp_video_streaming_FFMPEG/: CMakeLists.txt  CVQueue.cpp  CVQueue.h  Object.h  ObjectDetection.cpp  ObjectDetection.h  main.cpp
rtp_video_streaming_FFMPEG/utils/label/: technopro_obj_labels.txt
